overlapping and hero section fixed

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -41,7 +41,7 @@ a{
 }
 #hhero-banner{
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     padding: 50px;
     /* margin-top: 100px; */
     /* margin-bottom: 50px; */
